--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="display">0</div>
+        <div class="display"></div>
         <div class="calculator-buttons">
             <div class="row">
-                <div class="clear">c</div>
-                <div class="action">«</div>
-                <div class="action">/</div>
+                <div class="clear" onclick="clearDisplay()">c</div>
+                <div class="action" onclick="backspace()">«</div>
+                <div class="action" onclick="operator('/')">/</div>
             </div>
             <div class="row">
-                <div class="num">7</div>
-                <div class="num">8</div>
-                <div class="num">9</div>
-                <div class="action">x</div>
+                <div class="num" onclick="addNumber('7')">7</div>
+                <div class="num" onclick="addNumber('8')">8</div>
+                <div class="num" onclick="addNumber('9')">9</div>
+                <div class="action" onclick="operator('x')">x</div>
             </div>
             <div class="row">
-                <div class="num">4</div>
-                <div class="num">5</div>
-                <div class="num">6</div>
-                <div class="action">-</div>
+                <div class="num" onclick="addNumber('4')">4</div>
+                <div class="num" onclick="addNumber('5')">5</div>
+                <div class="num" onclick="addNumber('6')">6</div>
+                <div class="action" onclick="operator('-')">-</div>
             </div>
             <div class="row">
-                <div class="num">1</div>
-                <div class="num">2</div>
-                <div class="num">3</div>
-                <div class="action">+</div>
+                <div class="num" onclick="addNumber('1')">1</div>
+                <div class="num" onclick="addNumber('2')">2</div>
+                <div class="num" onclick="addNumber('3')">3</div>
+                <div class="action" onclick="operator('+')">+</div>
             </div>
             <div class="row">
-                <div class="num">±</div>
-                <div class="num">0</div>
-                <div class="num">,</div>
-                <div class="equal">=</div>
+                <div class="num" onclick="sign()">±</div>
+                <div class="num" onclick="addNumber('0')">0</div>
+                <div class="num" onclick="comma()">,</div>
+                <div class="equal" onclick="equal()">=</div>
             </div>
         </div>
     </div>
